# Typst-for-Obsidian

./: .editorconfig  .gitignore  .prettierignore  LICENSE  README.md  biome.json  build.js  esbuild.config.mjs  keywords.txt  main.css  main.js  main.ts  manifest.json  old.md  package-lock.json  package.json  plugin.css  styles.css  tsconfig.json
.github/workflows/: release.yml
.helix/: languages.toml
compiler/: Cargo.toml
compiler/src/: diagnostic.rs  file_entry.rs  lib.rs  render.rs  world.rs
src/: EditorStateManager.ts  HelixEditor.ts  LocalPackageManager.ts  PackageDownloader.ts  PackageManager.ts  PackageParser.ts  PdfRenderer.ts  SnippetManager.ts  TemplateVariableProvider.ts  TypstCompiler.ts  TypstEditor.ts  TypstParser.ts  TypstView.ts  ViewActionBar.ts  colorModal.ts  commands.ts  compiler.worker.ts  editorStateManager.ts  fontManager.ts  main.ts  modal.ts  packageManager.ts  pdfRenderer.ts  pdf_viewer.css  settings.ts  settingsModal.ts  settingsModalConfigs.ts  settingsTab.ts  templateVariableProvider.ts  types.d.ts  typstEditor.ts  typstView.ts  util.ts
src/grammar/: typst-highlight.ts  typst-language.ts  typst-parser.js  typst-parser.terms.js  typst-theme.ts  typst.grammar  typst.tmLanguage.json  typst.ts  typstLanguage.ts  typstTheme.ts
src/settings/: commands.ts  settings.ts  settingsModal.ts  settingsModalConfigs.ts  settingsTab.ts
src/types/: js-untar.d.ts  packages.ts  worker.ts
src/ui/: createTypstFileModal.ts
src/util/: constants.ts  markdown.util.ts  typstUtils.ts
