[package]
name = "obsidian-typst"
version = "0.1.0"
authors = ["k0src"]
edition = "2021"
description = "Native-feeling Typst editor for Obsidian."
readme = "README.md"
rust-version = "1.72.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Everything to do with Typst
typst = "0.12"
typst-render = "0.12"
typst-svg = "0.12"
typst-pdf = "0.12"
typst-assets = {version = "0.12", features = ["fonts"]}
comemo = "0.4"

# Everything to do with wasm
wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "^0.6"
web-sys = { version = "^0.3", features = [
    "console",
    "Window",
    "FontData",
    "Blob",
    "ImageData",
] }
console_error_panic_hook = "0.1.7"

# Image handling
fast_image_resize = "5.0.0"
hex = "0.4"
tiny-skia = "0.11"

ariadne = "0.5.0"
chrono = "0.4.30"
parking_lot = "0.12.3"
send_wrapper = "0.6.0"